crates/elif-http-derive/tests/ui/fail/routes_on_fn.stderr
error: expected `impl`
 --> tests/ui/fail/routes_on_fn.rs:6:1
  |
6 | fn not_an_impl_block() {
  | ^^
